src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  h1 {
    @apply my-8 text-5xl font-bold text-primary;
  }

  h2 {
    @apply my-4 text-3xl font-bold;
  }

  h3 {
    @apply my-4 text-2xl font-bold;
  }

  .cards-container {
    @apply inline-grid justify-items-center gap-4 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4;
  }

  .youtube-cards-wrapper {
    @apply flex flex-col items-center;
    min-height: 38rem;
  }
}

